# meta

./: .gitignore  clone.sh  config.sh  flake.nix  generateAuthlibInjector.py  pyproject.toml  status.sh  update.sh  updateAuthlibInjector.py
.github/workflows/: sync-upstream.yml  update.yml
docker/: entrypoint.sh
meta/common/: authlib_injector.py  loki.py  mojang-minecraft-legacy-services.json
meta/model/: __init__.py
meta/run/: generate_authlib_injector.py  generate_java.py  generate_loki.py  update_authlib_injector.py  update_loki.py
nix/: dev.nix
nix/pkgs/: blockgame-meta.nix
