[tool.poetry]
name = "meta"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
cachecontrol = "^0.13.1"
pydantic = "^1.10.4"
hatchling = "^1.18.0"
filelock = "^3.12.2"
python-dateutil = "^2.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
